# SeaDemo

./: CMakeLists.txt  LICENSE  README.md  SeaProject.qmlproject  SeaProject.qmlproject.qtds.e54befb  qmlmodules
asset_imports/: sdj.qml
content/: App.qml  CMakeLists.txt  Screen01.qml  sdj.qml  sdj_20.mesh
imports/: CMakeLists.txt
imports/SeaProject/: CMakeLists.txt  Constants.qml  qmldir
imports/SeaProject/designer/: plugin.metainfo
src/: Backend.cpp  Backend.h  EcatConfig.cpp  EcatConfig.h  import_qml_plugins.h  main.cpp
